--- a/lightzoneconfig/Custom.xaml
+++ b/lightzoneconfig/Custom.xaml
@@ -24,8 +24,10 @@
 						Text="5.为保证新登录用户帧数稳定,请尽量避免在出生点保护区域周围建筑." />
 			<TextBlock TextWrapping="Wrap" Margin="0,0,0,2"
 						Text="6.Project世界需要启用COC系列资源包支持,默认没有启用." />
-			<TextBlock TextWrapping="Wrap" Margin="0,0,0,2"
+			<TextBlock TextWrapping="Wrap" Margin="0,0,0,2" Foreground="#66CCFF"
 						Text="  登录/绑定邮箱指令一览:
+						      
+						 
 								登录
 									/login 密码
 									/l 密码
