--- a/lightzoneconfig/Custom.xaml
+++ b/lightzoneconfig/Custom.xaml
@@ -7,25 +7,23 @@
 		<local:MyHint Margin="0,8,0,2" IsWarn="False"
 		           Text="重要" />				   	
 			<TextBlock FontSize="18" TextWrapping="Wrap" Margin="0,0,0,2" Foreground="#FF0000"
-				   Text="			Important:请先在左侧配置好您的游戏帐户.建议使用JAVA8.该版本仍在持续维护优化中,bug提交请见下文.该页面布局通过觅忆时光云MeCloud和jsdeliver热更新,请留意可能的公告." />
+				   Text="			Important:请先在左侧配置好您的游戏帐户.建议使用JAVA11或以上版本.该版本仍在持续维护优化中,bug提交请见下文.该页面布局通过觅忆时光云MeCloud和jsdeliver热更新,请留意可能的公告." />
 			<TextBlock FontSize="15" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="#55C5BB"
 				   Text="			Notice:自V2.1版本起,我们开始支持IPv4/IPv6双栈登录,但我们建议您首选IPv6.值得庆幸的是,目前公众网络普遍接入了IPv6,且路由优化已达到可用标准.您可使用调试工具中的[IPv6_TEST]检查您的网络配置环境." />
 			<TextBlock FontSize="15" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="#FF0000"
-				   Text="			New:客户端已更新至V3.0,旧版本已不可用,请前往群文件或觅忆时光云下载新版客户端.本次更新:移除工业mod及其附属/性能优化" />
+				   Text="			New:全新觅光之境LightZoneV3.0开启Beta测试,更新Minecraft至1.16.5版本,欢迎捉虫." />
 	    		<TextBlock FontSize="15" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="#FF0000"
 				   Text="			温馨提示:正版用户请及时登录minecraft.net迁移您的Mojang账号至微软账号" />
 			<local:MyHint Margin="0,8,0,2" IsWarn="False"
 		           Text="开始游戏前,请阅读以下信息." />
 			<TextBlock TextWrapping="Wrap" Margin="0,0,0,2"
-						Text="1:特殊键位提示:默认Shift+鼠标右键 来搬运箱子.拔刀剑键位涉及到鼠标侧键,建议自行前往键位设置调整." />
+						Text="1:特殊键位提示:默认Shift+鼠标右键 来搬运箱子.魔女扫帚Ctrl键下降/空格键上升,详情见游戏内说明" />
 			<TextBlock TextWrapping="Wrap" Margin="0,0,0,2"
-						Text="2:核心MOD提示:茶艺/拔刀剑/咖啡/托马斯农场/东方TouhouLittleMaid/Sakura/盖亚魔典/血月/COC/家具."/>
+						Text="2:核心MOD提示:拔刀剑/托马斯农场/东方TouhouLittleMaid/家具/植物魔法."/>
 			<TextBlock TextWrapping="Wrap" Margin="0,0,0,2"
 						Text="3.登录后若未出生在出生点,请输入/spawn或想办法neng死自己= V =." />
 			<TextBlock TextWrapping="Wrap" Margin="0,0,0,2"
 						Text="4.为保证新登录用户帧数稳定,请尽量避免在出生点保护区域周围建筑." />
-			<TextBlock TextWrapping="Wrap" Margin="0,0,0,2"
-						Text="5.Project世界需要启用COC系列资源包支持,默认没有启用." />
 			<TextBlock TextWrapping="Wrap" Margin="0,0,0,2" Foreground="#FF0000"
 						Text="登录/绑定邮箱指令一览:" />
 									<TextBlock TextWrapping="Wrap" Margin="0,0,0,2" Foreground="#FF22EE"
