--- a/lightzoneconfig/Custom.xaml
+++ b/lightzoneconfig/Custom.xaml
@@ -14,7 +14,7 @@
 				   Text="			New:全新觅光之境LightZoneV3.0开启Beta测试,更新Minecraft至1.16.5版本,欢迎捉虫." />
 	    		<TextBlock FontSize="15" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="#FF0000"
 				   Text="			温馨提示:正版用户请及时登录minecraft.net迁移您的Mojang账号至微软账号" />
-			<TextBlock FontSize="15" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="##33FF22"
+			<TextBlock FontSize="15" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="#33FF22"
 			   	   Text="			AMD显卡用户请将BetterFoliage模组中的[NVIDIA显卡]项关闭." />
 			<local:MyHint Margin="0,8,0,2" IsWarn="False"
 		           Text="开始游戏前,请阅读以下信息." />
