--- a/lightzoneconfig/Custom.xaml
+++ b/lightzoneconfig/Custom.xaml
@@ -12,6 +12,8 @@
 				   Text="			Notice:自V2.1版本起,我们开始支持IPv4/IPv6双栈登录,但我们建议您首选IPv6.值得庆幸的是,目前公众网络普遍接入了IPv6,且路由优化已达到可用标准.您可使用调试工具中的[IPv6_TEST]检查您的网络配置环境." />
 			<TextBlock FontSize="15" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="#FF0000"
 				   Text="			New:全新觅光之境LightZoneV3.0开启Beta测试,更新Minecraft至1.16.5版本,欢迎捉虫." />
+			<TextBlock FontSize="16" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="#FFA500"
+				   Text="			PS:如遇间断卡顿或声音丢失,请使用F3+T组合键重载资源包" />
 	    		<TextBlock FontSize="15" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="#FF0000"
 				   Text="			温馨提示:正版用户请及时登录minecraft.net迁移您的Mojang账号至微软账号" />
 			<TextBlock FontSize="15" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="#00CED1"
