--- a/lightzoneconfig/Custom.xaml
+++ b/lightzoneconfig/Custom.xaml
@@ -14,6 +14,8 @@
 				   Text="			New:全新觅光之境LightZoneV3.0开启Beta测试,更新Minecraft至1.16.5版本,欢迎捉虫." />
 			<TextBlock FontSize="16" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="#FFA500"
 				   Text="			PS:如遇间断卡顿或声音丢失,请使用F3+T组合键重载资源包" />
+	    		<TextBlock FontSize="20" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="#FF0000"
+				   Text="			重要提醒：LightZone正搭建与开发社区同步测试的1.18版本,从此LightZone将保持【纯净、灰度测试、紧跟新版本】的开发模式，并可能接入Mojang官方正版验证UUID系统，我们更希望最大化LightZone项目社区的持久性和数据安全性，因此带来的不便请谅解。" />	    
 	    		<TextBlock FontSize="15" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="#FF0000"
 				   Text="			温馨提示:正版用户请及时登录minecraft.net迁移您的Mojang账号至微软账号" />
 			<TextBlock FontSize="15" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="#00CED1"
